tests/fixtures/invalid/locale/broken-annotation.lgl
price = {amount @currency(code = "USD"}
